<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_all_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login4background2">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/register_imageView"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="hey,  还没有账号?"
            android:textSize="24sp"/>
      <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="快来注册吧~"
            android:layout_marginTop="10dp"
            android:textSize="24sp"/>
        <!--账号控件部分-->
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/accountbackground"
            android:orientation="horizontal"
            android:layout_marginTop="80dp">

            <ImageView
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:src="@drawable/login4headback" />

            <EditText
                android:id="@+id/register_AccountEdit"
                android:layout_width="227dp"
                android:layout_height="43dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:digits="@string/register_name_digits"
                android:elevation="10dp"
                android:focusable="true"
                android:hint="@string/phone_email"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="#F0F8FF"
                android:textColorHint="#F0F8FF"
                android:textSize="15sp" />
        </LinearLayout>
        <!--第一次输入密码控件部分-->
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/register_Code"
            android:layout_marginTop="33dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/accountbackground"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:password="true"
            android:hint="@string/write_vertification"
            android:textColorHint="#F0F8FF"
            android:textColor="#F0F8FF"
            android:singleLine="true"
            android:focusable="true"
            android:textSize="15sp"
            android:digits="@string/register_name_digits"
            android:layout_width="135dp"
            android:layout_height="43dp" />
            <Button
                android:id="@+id/register_getCode"
                android:layout_width="130dp"
                android:layout_height="43dp"
                android:text="@string/get_vertification"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/registerbackground"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/accountbackground"
            android:orientation="horizontal">
            <!--输入密码控件部分-->
            <ImageView
                android:id="@+id/login4registerLock"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:src="@drawable/login4lock_background" />

            <EditText
                android:id="@+id/register_first_passwords"
                android:layout_width="184dp"
                android:layout_height="43dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/login4registerLock"
                android:background="@null"
                android:focusable="true"
                android:hint="@string/password"
                android:padding="3dp"
                android:paddingLeft="15dp"
                android:password="true"
                android:singleLine="true"
                android:textColor="#F0F8FF"
                android:textColorHint="#F0F8FF"
                android:textSize="15sp" />
            <!--登录控件部分-->
            <ImageView
                android:id="@+id/login4loginButton"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_toRightOf="@id/register_first_passwords"
                android:src="@mipmap/login4eye" />
        </RelativeLayout>
        <Button
            android:id="@+id/register_Button"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_bt_background"
            android:text="@string/register"
            android:textSize="30sp"
            />
        <!--随便看看，游客模式-->
        <Button
            android:id="@+id/visitor_mode_bt"
            android:textSize="25sp"
            android:text="@string/visitor_look"
            android:textColor="#F0F8FF"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


</LinearLayout>
