<?xml version="1.0" encoding="utf-8"?>
<!--异议界面的popupWindow,为了屏幕适配，宽高需要在代码中动态调整-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white_fill_rect"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="3dp"
    android:paddingBottom="3dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objection"
        android:textSize="15sp"
        android:textColor="@color/word_color"
        android:layout_centerInParent="true"/>
</RelativeLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/middle_gray"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/objection_sketch_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:hint="@string/sketch_argument_edt_hint"
            android:lines="2"
            android:maxLines="3"
            android:textSize="14sp"
            android:gravity="top"
            android:padding="5dp"
            android:textColor="@color/light_gray"/>

        <TextView
            android:id="@+id/objecition_sketch_wordNum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/objection_sketch_edt"
            android:text="0/38"
            android:textColor="#009688"
            android:layout_marginBottom="3dp"/>
    </RelativeLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/middle_gray"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/objecion_explain_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:hint="@string/explain_argument_edt_hint"
            android:lines="3"
            android:maxLines="6"
            android:textSize="14sp"
            android:gravity="top"
            android:padding="5dp"
            android:textColor="@color/light_gray"/>

        <TextView
            android:id="@+id/objeciton_explain_wordNum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/objecion_explain_edt"
            android:text="0/100"
            android:textColor="#009688"
            android:layout_marginBottom="3dp"/>
    </RelativeLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/middle_gray"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/objection_explain_wordNum_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/word_color"
        android:layout_centerInParent="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"/>
    </RelativeLayout>
</LinearLayout>