<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">
<LinearLayout
    android:id="@+id/choise_direction_all_layout"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/title_backgroundColor"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/publish_back_bt"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/black_back_bt"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id='@+id/publish_title_tv'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="人权天赋还是天赋人权"
            android:textColor="@color/word_color"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/confirm"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="20dp"
        />
</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/word_color"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/white_fill_rect">

        <EditText
            android:id="@+id/publish_summary_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/noMoreWords"
            android:lines="3"
            android:maxLines="3"
            android:padding="5dp"
            android:textColor="@color/light_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/publish_summary_wordNum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/publish_summary_edt"
            android:text="0/50"
            android:textColor="#009688" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/word_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_fill_rect">

        <EditText
            android:id="@+id/publish_details_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/model1"
            android:lines="6"
            android:maxLines="6"
            android:padding="5dp"
            android:textColor="@color/light_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/explain_wordNum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/publish_details_edt"
            android:text="0/100"
            android:textColor="#009688" />
    </RelativeLayout>
</LinearLayout>